--- a/Challenges/Desafio01/ToDo-List/src/global.css
+++ b/Challenges/Desafio01/ToDo-List/src/global.css
@@ -34,3 +34,42 @@ body, input, textarea, button{
   font-weight: 400;
   font-size: 1rem;
 }
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-top: 1.5px solid;
+  border-radius: 8px;
+  border-color: var(--gray-400);
+  width: 34.5rem;
+  margin-top: 24px;
+  padding: 24px 0;
+ }
+ 
+ section > p {
+   color: var(--gray-300);
+   margin-top: 16px;
+ }
+
+ main{
+  margin-top: 64px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  justify-content: center;
+}
+
+span {
+  background: var(--gray-400);
+  color: var(--gray-200);
+  padding: 1px 8px;
+  border-radius: 999px;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
